# economic-youtube-headline-skill

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
contracts/v1/: SEMVER_COMPATIBILITY.md  headline.schema.json
contracts/v1/examples/: valid.complete.json  valid.ended_live.json  valid.partial.json
docs/: state-machine.md
src/economic_youtube_headline_skill/: cli.py  models.py  pipeline.py  processor.py  render.py  result_store.py  session_logger.py  settings.py  state_machine.py  youtube.py
tests/: test_channel_input.py  test_contract_v1.py  test_render.py  test_result_store.py  test_session_logger.py  test_state_machine.py  test_transcript_diagnostics.py
